# Sistema-Pet

./: .env.development  .env.example  .env.production  .env.production-local  .env.production.example  .env.staging.example  .env.whatsapp-pilot.example  .gitignore  .sonarcloud.properties  AGENTS.md  ARQUITETURA_SISTEMA.md  ASSISTENTE_RELEASE.bat  ASSISTENTE_RELEASE_EXECUTAR.bat  BACKUP_COMPLETO.bat  BACKUP_RESTORE_RUNBOOK.md  CHANGELOG_PADRONIZACAO.md  CHANGES_GUARDRAIL_COMMIT_P0.md  CHANGES_GUARDRAIL_MULTIPLE_COMMITS_P0.md  CHANGES_GUARDRAIL_NESTED_TRANSACTION_P0.md  CHANGES_PREPROD_DB_MIGRATIONS.md  CHANGES_PREPROD_ENV_VALIDATION.md  CHANGES_PREPROD_HEALTH_READY.md  CHANGES_PREPROD_OBSERVABILITY.md  CHANGES_PREPROD_SEED_CONTROL.md  CHANGES_TRANSACTIONS_INFRA_P0.md  CHANGES_TRANSACTION_CANCELAR_VENDA_P0.md  CHANGES_TRANSACTION_ESTORNO_COMISSOES_P0.md  CHANGES_TRANSACTION_EXCLUIR_VENDA_P0.md  CHANGES_TRANSACTION_PROVISAO_COMISSOES_P0.md  CHANGES_TRANSACTION_TEST_CANCELAR_VENDA.md  CHANGES_TRANSACTION_TEST_ESTORNO_COMISSOES.md  CHANGES_TRANSACTION_TEST_EXCLUIR_VENDA.md  CHANGES_TRANSACTION_TEST_PROVISAO_COMISSOES.md  CHECKLIST_CORRIGIR_FRONTEND.md  CHECKLIST_TESTES_PRE_PRODUCAO.md  CLAUDE.md  CORRECAO_ENDPOINTS_RACOES.md  CORRECOES_APLICADAS.md  CORRIGIR_404_FRONTEND.md  CORRIGIR_GOOGLE_MAPS_API.md  (+90 more)
.githooks/: pre-commit  pre-push
backups/backup_pre_producao_20260212_183142/backend/: .env.example  alembic.ini  check_contas_receber.py  check_migration_status.py  importar_simplesvet.py  insert_template_stone.sql  investigar_importacao.py  investigar_venda_pagamentos.py  migrar_fretes.sql  pyproject.toml  reprocessar_venda.py  test_migration.py  ver_colunas.py
mcp/frontend_react_server/: README.md  pyproject.toml
mcp/ops_api_server/: README.md  pyproject.toml
(+5225 files in other folders)
