[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sistema-pet-frontend-mcp"
version = "1.0.0"
description = "MCP Server para operação e validação do frontend React do Sistema Pet"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.12.0",
  "requests>=2.32.0",
]

[project.scripts]
frontend-react-mcp = "frontend_react_mcp.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
