[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sistema-pet-ops-api-mcp"
version = "1.0.0"
description = "MCP Server de Operações e API para o fluxo único DEV->PROD do Sistema Pet"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.12.0",
  "requests>=2.32.0",
]

[project.scripts]
ops-api-mcp = "ops_api_mcp.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
